--- a/finimalism10.11.css
+++ b/finimalism10.11.css
@@ -1695,7 +1695,17 @@ button.is-emby-button emby-button {
 }
 
 .layout-desktop div.itemMiscInfo.itemMiscInfo-primary,
-.layout-tv div.itemMiscInfo.itemMiscInfo-primary,
+.layout-tv div.itemMiscInfo.itemMiscInfo-primary {
+  font-size: 1.3em;
+  font-weight: 600;
+  text-align: center;
+  filter: drop-shadow(0px 4px 1px #0005);
+  justify-content: flex-start;
+  padding-top: 1.2em;
+  width: 61vw;
+  gap: 5%;
+}
+
 .layout-desktop .itemName.originalTitle,
 .layout-tv .itemName.originalTitle {
   font-size: 1.3em;
@@ -3504,6 +3514,18 @@ content: '';
 .layout-tv .itemDetailPage:has(.button-link.itemAction.emby-button[data-type="Season"]) .itemDetailsGroup .detailsGroupItem.directorsGroup .directorsLabel.label,
 .layout-tv .itemDetailPage:has(.button-link.itemAction.emby-button[data-type="Season"]) .itemDetailsGroup .detailsGroupItem.studiosGroup .studiosLabel.label {
   text-align: center;
+}
+
+.layout-desktop .itemDetailPage:has(.button-link.itemAction.emby-button[data-type="Season"]) div.itemMiscInfo.itemMiscInfo-primary,
+.layout-tv .itemDetailPage:has(.button-link.itemAction.emby-button[data-type="Season"]) div.itemMiscInfo.itemMiscInfo-primary {
+  font-size: 1.3em;
+  font-weight: 600;
+  text-align: center;
+  filter: drop-shadow(0px 4px 1px #0005);
+  justify-content: flex-start;
+  padding-top: 0.85em;
+  width: 61vw;
+  gap: 5%;
 }
 
 .layout-desktop .itemDetailPage:has(.button-link.itemAction.emby-button[data-type="Season"]) .detailLogo,
